--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bazzite/nuxt-optimized-images",
+  "name": "@nassosyian/nuxt-optimized-images",
   "version": "0.3.0",
   "description": "Automatically optimizes images used in Nuxt.js projects (jpeg, png, svg, webp and gif).",
   "main": "lib/index.js",
@@ -13,12 +13,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bazzite/nuxt-optimized-images.git"
+    "url": "git+https://github.com/nassosyian/nuxt-optimized-images.git"
   },
   "author": "Bazzite <opensource@bazzite.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/bazzite/nuxt-optimized-images/issues"
+    "url": "https://github.com/nassosyian/nuxt-optimized-images/issues"
   },
   "homepage": "https://www.bazzite.com/docs/nuxt-optimized-images/?utm_source=npm&utm_medium=readme&utm_campaign=nuxt-optimized-images",
   "dependencies": {
@@ -41,19 +41,19 @@
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-standard": "4.0.1",
     "eslint-plugin-vue": "6.2.0",
-    "husky": "3.1.0",
-    "imagemin-gifsicle": "6.0.1",
+    "husky": "^4.2.5",
+    "imagemin-gifsicle": "7.0.0",
     "imagemin-mozjpeg": "8.0.0",
     "imagemin-pngquant": "8.0.0",
-    "imagemin-svgo": "7.0.0",
+    "imagemin-svgo": "7.1.0",
     "jest": "24.9.0",
     "jimp": "0.9.3",
     "loader-utils": "1.2.3",
     "lodash.clonedeepwith": "4.5.0",
     "lodash.isstring": "4.0.1",
     "lqip-loader": "2.2.0",
-    "responsive-loader": "1.2.0",
-    "sharp": "0.24.1",
+    "responsive-loader": "https://github.com/shoutout-labs/responsive-loader.git",
+    "sharp": "0.25.2",
     "sqip-loader": "1.0.0",
     "upath": "1.2.0",
     "webp-loader": "0.6.0"
